[gd_scene load_steps=5 format=3 uid="uid://e2vuw03w1lx6"]

[ext_resource type="Script" path="res://GUI/actionGUI/cooking_GUI.gd" id="1_yctcf"]
[ext_resource type="Texture2D" uid="uid://c10dm4x6n65dm" path="res://res/sprites/GUI/icons/icon_needs_heat.png" id="2_rmnvb"]
[ext_resource type="Texture2D" uid="uid://clxphar2j8ggq" path="res://res/sprites/GUI/icons/icon_needs_time.png" id="2_srli2"]
[ext_resource type="Texture2D" uid="uid://b3oov025lvb8v" path="res://res/sprites/GUI/icons/icon_needs_water.png" id="3_f34gp"]

[node name="CookingGUI" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
scale = Vector2(0.75, 0.75)
script = ExtResource("1_yctcf")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 0
offset_left = 80.0
offset_top = 80.0
offset_right = 496.0
offset_bottom = 288.0

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="VBC" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="TitleSpacing" type="MarginContainer" parent="PanelContainer/MarginContainer/VBC"]
layout_mode = 2
theme_override_constants/margin_bottom = 12

[node name="Title" type="RichTextLabel" parent="PanelContainer/MarginContainer/VBC/TitleSpacing"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
theme_type_variation = &"HeaderLarge"
text = "Was m√∂chtest du kochen?"

[node name="RecipeBox" type="PanelContainer" parent="PanelContainer/MarginContainer/VBC"]
layout_mode = 2
theme_type_variation = &"WhitePanelContainer"

[node name="ScrollContainer" type="ScrollContainer" parent="PanelContainer/MarginContainer/VBC/RecipeBox"]
custom_minimum_size = Vector2(0, 450)
layout_mode = 2

[node name="RecipeList" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBC/RecipeBox/ScrollContainer"]
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="PanelContainer/MarginContainer/VBC"]
layout_mode = 2

[node name="HBC" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBC/PanelContainer"]
custom_minimum_size = Vector2(0, 70)
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="PanelContainer/MarginContainer/VBC/PanelContainer/HBC"]
custom_minimum_size = Vector2(410, 0)
layout_mode = 2

[node name="InputItemList" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBC/PanelContainer/HBC/ScrollContainer"]
layout_mode = 2

[node name="VSeparator" type="VSeparator" parent="PanelContainer/MarginContainer/VBC/PanelContainer/HBC"]
layout_mode = 2

[node name="RestrictionList" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBC/PanelContainer/HBC"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2

[node name="NeedsWater" type="TextureRect" parent="PanelContainer/MarginContainer/VBC/PanelContainer/HBC/RestrictionList"]
layout_mode = 2
texture = ExtResource("3_f34gp")

[node name="NeedsHeat" type="TextureRect" parent="PanelContainer/MarginContainer/VBC/PanelContainer/HBC/RestrictionList"]
layout_mode = 2
texture = ExtResource("2_rmnvb")

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBC"]
layout_mode = 2

[node name="Cook" type="Button" parent="PanelContainer/MarginContainer/VBC/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Kochen"
icon = ExtResource("2_srli2")

[node name="Cancel" type="Button" parent="PanelContainer/MarginContainer/VBC/HBoxContainer" groups=["Button"]]
layout_mode = 2
size_flags_horizontal = 3
text = "Abbrechen"

[connection signal="pressed" from="PanelContainer/MarginContainer/VBC/HBoxContainer/Cook" to="." method="_on_cooking_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBC/HBoxContainer/Cancel" to="." method="_on_cancel_pressed"]
